Enable mcp2515 CAN controller for intel aero
Signed-off-by: Sugnan Prabhu S <sugnan.prabhu.s@intel.com>

--- a/conf/machine/intel-aero.conf
+++ b/conf/machine/intel-aero.conf
@@ -18,7 +18,7 @@ MACHINE_EXTRA_RDEPENDS += "linux-firmware-iwlwifi-8000c"
 MACHINE_EXTRA_RRECOMMENDS += "aero-watchdog aero-utils"
 MACHINE_EXTRA_RRECOMMENDS += "efibootmgr"
 
-KERNEL_MODULE_AUTOLOAD += "spi_imu spi_fpga spi_can"
+KERNEL_MODULE_AUTOLOAD += "spi_imu spi_fpga"
 
 MACHINE_FEATURES_remove = "acpi"
 
